# CommandIndex

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDINDEX.md  Cargo.toml  README.md
.claude/agents/: acceptance-test-agent.md  investigation-agent.md  progress-report-agent.md  refactoring-agent.md  tdd-impl-agent.md
.claude/commands/: acceptance-test.md  apply-review.md  architecture-review.md  bug-fix.md  create-pr.md  design-policy.md  issue-create.md  issue-enhance.md  issue-split.md  issues-exec-plan.md  multi-stage-design-review.md  multi-stage-issue-review.md  orchestrate.md  pm-auto-design2dev.md  pm-auto-dev.md  pm-auto-issue2dev.md  pr-merge-pipeline.md  refactoring.md  release.md  tdd-impl.md  uat-fix-loop.md  uat.md  work-plan.md  worktree-cleanup.md  worktree-setup.md
.claude/lib/: validators.sh
.claude/prompts/: acceptance-test-core.md  progress-report-core.md  refactoring-core.md  tdd-impl-core.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
sandbox/: uat-summary.html
sandbox/5/: latest
src/: lib.rs  main.rs
tests/: cli_args.rs  cli_clean.rs  cli_export.rs  cli_import.rs  cli_index.rs  cli_status.rs  diff_detection.rs  e2e_code_index.rs  e2e_context_pack.rs  e2e_embedding.rs  e2e_export_import.rs  e2e_integration.rs  e2e_phase3_integration.rs  e2e_related_search.rs  e2e_semantic_hybrid.rs  e2e_symbol_search.rs  e2e_team_workflow.rs  e2e_update.rs  e2e_verify.rs  e2e_workspace.rs  ignore_filter.rs  incremental_update.rs  indexer_state.rs  indexer_tantivy.rs  output_format.rs  parser_markdown.rs  parser_python.rs  parser_typescript.rs  workspace_config.rs
(+887 files in other folders)
